# SokolFlecsTest

./: LICENSE  README.md
src/: CMakeLists.txt  compile_commands.json
src/.cache/clangd/index/: headers.hpp.ED372E743F97CEF1.idx  main.cpp.F0667FD72E17B9CA.idx  main.hpp.514DC3E455256283.idx
src/.shader/: fragmentShader.glsl  vertexShader.glsl
src/core/: headers.hpp  main.cpp  main.hpp
src/core/~/.vim/undodir/: C%%Users%jal4dsox%C++Stuff%SokolFlecsTest%src%.shader%fragmentShader.glsl  C%%Users%jal4dsox%C++Stuff%SokolFlecsTest%src%.shader%vertexShader.glsl  C%%Users%jal4dsox%C++Stuff%SokolFlecsTest%src%core%  C%%Users%jal4dsox%C++Stuff%SokolFlecsTest%src%core%headers.hpp  C%%Users%jal4dsox%C++Stuff%SokolFlecsTest%src%core%main.cpp  C%%Users%jal4dsox%C++Stuff%SokolFlecsTest%src%core%main.hpp  C%%Users%jal4dsox%C++Stuff%SokolFlecsTest%src%core%test.cpp
src/~/.vim/undodir/: C%%Users%jal4dsox%C++Stuff%SokolFlecsTest%src%CMakeLists.txt  C%%Users%jal4dsox%C++Stuff%SokolFlecsTest%src%core%  C%%Users%jal4dsox%C++Stuff%SokolFlecsTest%src%core%header.hpp  C%%Users%jal4dsox%C++Stuff%SokolFlecsTest%src%core%include%header.hpp  C%%Users%jal4dsox%C++Stuff%SokolFlecsTest%src%core%main.cpp  C%%Users%jal4dsox%C++Stuff%SokolFlecsTest%src%core%main.hpp  C%%Users%jal4dsox%C++Stuff%SokolFlecsTest%src%core%windowLayer.cpp  C%%Users%jal4dsox%C++Stuff%SokolFlecsTest%src%core%windowLayer.hpp
